--- a/index.tex
+++ b/index.tex
@@ -155,7 +155,7 @@
 \setlength{\parskip}{0pt}
 
 \hypersetup{
-  pdftitle={Dossier: visualizing/ understanding decision choices in data analysis via decision similarity},
+  pdftitle={A LLM-based pipeline for understanding decision choices in data analysis from published literature},
   pdfauthor={H. Sherry Zhang; Roger D. Peng},
   colorlinks=true,
   linkcolor={blue},
@@ -224,8 +224,8 @@ Systems}{Apr 13--17, 2026}{Barcelona, Spain}
 %%
 %% The "title" command has an optional parameter,
 %% allowing the author to define a "short title" to be used in page headers.
-\title{Dossier: visualizing/ understanding decision choices in data
-analysis via decision similarity}
+\title{A LLM-based pipeline for understanding decision choices in data
+analysis from published literature}
 
 %%
 %% The "author" command and its associated commands are used to define
