--- a/index.tex
+++ b/index.tex
@@ -261,25 +261,27 @@ analysis from published literature}
 %% The abstract is a short summary of the work to be presented in the
 %% article.
 \begin{abstract}
-Decision choices made during data analysis, along with the reasons
-motivating them, are center to how results are interpreted and to
-comparisons across similar studies. However, such decisions -- such as
-selecting the degree of freedom for a smoothing spline and the
-rationalebehind them -- are rarely studied, since it is impractical to
-interview authors for all the alternatives and their motivations or to
-rerun the analysis under different options. In this work, we propose a
-workflow to automatically extract analytic decisions from the published
-literature and organize them into structured data using Large Language
-Models (Claude and Gemini). The pipeline then calculates paper
-similarity based on the semantic similarity of these extracted decisions
-and their reasons, and visualizes the results using clustering
-algorithms. We apply this workflow to a set of studies on the effect of
-particulate matter on mortality and hospital admission, conducted by
-researchers worldwide, which naturally provide alteranative analyses of
-the same question. Our approach offers an efficient way to study
-decision-making practices and robustness in data analysis compared with
-traditional interviews or author-focused sensitivity or multiverse
-analyses.    
+Decision choices, such as selecting the degree of freedom for a
+smoothing spline and the rationale behind them, are essential for
+interpreting results and understanding how uncertainty propagates
+through an analysis. Understanding how such choices are made and
+identifying common patterns in decisions can help junior researchers
+learn the field, while offering domain researchers a survey-like
+overview of current analysis practices. However, these decisions are
+rarely studied, as it is impractical to interview authors about all the
+alternatives considered during the work or to rerun the analysis under
+different options. In this work, We propose a workflow to automatically
+extract analytic decisions and their stated reasons from published
+literature using Large Language Models (Claude and Gemini). The pipeline
+also contributes to the calculation of paper similarity based on the
+semantic similarity of these extracted decisions and their reasons, and
+the visualization of papers using clustering algorithms. We apply this
+workflow to a set of studies on the effect of particulate matter on
+mortality and hospital admission, conducted by researchers worldwide,
+which naturally provide alteranative analyses of the same question. This
+approach enables large-scale, automated studies of decision-making
+practices in data analysis, providing an alternative to existing manual
+interview-based studies and small-scale `many analysts experiments'.    
 \end{abstract}
 
 %%
@@ -375,11 +377,13 @@ In summary, the contribution of this work includes:
   automatic extraction of decisions from scientific literature using
   LLMs,
 \item
-  A dataset of decisions and rationale, along with metadata, compiled
-  from 62 studies in air pollution mortality modelling, and
-\item
   A method to construct paper similarities based on the decisions and
-  the semantic similarity of their rationale.
+  the semantic similarity of their rationale,
+\item
+  A shiny GUI tool for validation LLM outputs in this context, and
+\item
+  A dataset of decisions and rationale, along with metadata, compiled
+  from 62 studies in air pollution mortality modelling.
 \end{itemize}
 
 \section{Related work}\label{sec-background}
