--- a/index.qmd
+++ b/index.qmd
@@ -3,8 +3,8 @@ format: acm-pdf
 keep-tex: true
 pdf-engine: pdflatex
 bibliography: references.bib
-title: "A LLM-based pipeline for understanding decision choices in data analysis from published literature"
-abstract: "Decision choices, such as selecting the degree of freedom for a smoothing spline and the rationale behind them, are essential for interpreting results and understanding how uncertainty propagates through an analysis. Understanding how such choices are made and identifying common patterns in decisions can help junior researchers learn the field, while offering domain researchers a survey-like overview of current analysis practices. However, these decisions are rarely studied, as it is impractical to interview authors about all the alternatives considered during the work or to rerun the analysis under different options. In this work, We propose a workflow to automatically extract analytic decisions and their stated reasons from published literature using Large Language Models (Claude and Gemini). The pipeline also contributes to the calculation of paper similarity based on the semantic similarity of these extracted decisions and their reasons, and the visualization of papers using clustering algorithms. We apply this workflow to a set of studies on the effect of particulate matter on mortality and hospital admission, conducted by researchers worldwide, which naturally provide alteranative analyses of the same question. This approach enables large-scale, automated studies of decision-making practices in data analysis, providing an alternative to existing manual interview-based studies and small-scale 'many analysts experiments'."
+title: "An LLM-based pipeline for understanding decision choices in data analysis from published literature"
+abstract: "Decision choices, such as those made when building regression models, and their rationale are essential for interpreting results and understanding how uncertainty propagates through an analysis. However, these decisions are rarely studied because tracing every alternatives considered by authors is often impractical, and reworking on a completed analysis is generally of limited interest. Consequently, researchers must manually review large bodies of published analyses in the literature to understand how such choices are made and to identify common choices within a field. In this work, we propose a workflow to automatically extract analytic decisions and their stated reasons from published literature using Large Language Models (Claude and Gemini). Our method also introduces a paper similarity measure based on decision similarity and visualizes papers using clustering algorithms. We apply this workflow to a set of studies on the effect of particulate matter on mortality conducted by researchers worldwide. This approach enables large-scale, automated studies of decision-making practices in data analysis, providing an alternative to existing manual interview-based studies and small-scale 'many analysts experiments'."
 notebook-links: false
 author:
   - name: H. Sherry Zhang
