--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,7 @@ keep-tex: true
 pdf-engine: pdflatex
 bibliography: references.bib
 title: "An LLM-based pipeline for understanding decision choices in data analysis from published literature"
-abstract: "Decision choices, such as those made when building regression models, and their rationale are essential for interpreting results and understanding how uncertainty propagates through an analysis. However, these decisions are rarely studied because tracing every alternatives considered by authors is often impractical, and reworking on a completed analysis is generally of limited interest. Consequently, researchers must manually review large bodies of published analyses in the literature to understand how such choices are made and to identify common choices within a field. In this work, we propose a workflow to automatically extract analytic decisions and their stated reasons from published literature using Large Language Models (Claude and Gemini). Our method also introduces a paper similarity measure based on decision similarity and visualizes papers using clustering algorithms. We apply this workflow to a set of studies on the effect of particulate matter on mortality conducted by researchers worldwide. This approach enables large-scale, automated studies of decision-making practices in data analysis, providing an alternative to existing manual interview-based studies and small-scale 'many analysts experiments'."
+abstract: "Decision choices, such as those made when building regression models, and their rationale are essential for interpreting results and understanding uncertainty in an analysis. However, these decisions are rarely studied because tracing every alternatives considered by authors is often impractical, and reworking a completed analysis is generally of limited interest. Consequently, researchers must manually review large bodies of published analyses to identify common choices and understand how choices are made. In this work, we propose a workflow to automatically extract analytic decisions and their reasons from published literature using Large Language Models. Our method also introduces a paper similarity measure based on decision similarity and visualization methods using clustering algorithms. As an example, this workflow is applied to analyses studying the effect of particulate matter on mortality. This approach enables scalable and automated studies of decision choices in applied data analysis, providing an alternative to existing qualitative and interview-based studies. "
 notebook-links: false
 author:
   - name: H. Sherry Zhang
