--- a/index.tex
+++ b/index.tex
@@ -346,23 +346,25 @@ during the analysis is often infeasible. Moreover, only until the last
 decades, analysis scripts and reproducible materials were not commonly
 required by journals for publishing. --- up till here{]}
 
-In this work, we develop a tabular format to record analytical decisions
-in data analysis and automate the extraction of these decisions from
-published papers using large language models (Gemini and Claude). The
-workflow also include a component to calculate paper similarity based on
-both the decisions and the semantic similarity of their rationales, and
-use clustering methods to visualize papers according to distance based
-on decision similarity. We apply this workflow to a set of 56 air
-pollution modelling studies estimating the effect size of particulate
-matter (PM2.5 or PM10) on mortality and hospital admissions, typically
-modeled using Poisson generalised linear models (GLMs) or generalized
-additive models (GAMs). Analysis of the extracted decisions reveals
-common choices in this type of analysis (number of knots or degree of
-freedom for smoothing methods for time, temperature and humidity) and
-find three distinct clusters corresponding to different smoothing
-methods (LOESS, natural spline, and smoothing spline) used in European
-and U.S. studies, consistent with findings from the APHENA project
-\citep{APHENA}.
+In this work, we propose a new approach to study data analysis decision
+choices through automatic extraction of decisions from scientific
+literature using LLMs. We develop a tabular format to record analytical
+decisions in data analysis and automate the extraction of these
+decisions from published papers using large language models (Gemini and
+Claude). The workflow also include a component to calculate paper
+similarity based on both the decisions and the semantic similarity of
+their rationales, and use clustering methods to visualize papers
+according to distance based on decision similarity. We apply this
+workflow to a set of 56 air pollution modelling studies estimating the
+effect size of particulate matter (PM2.5 or PM10) on mortality and
+hospital admissions, typically modeled using Poisson generalised linear
+models (GLMs) or generalized additive models (GAMs). Analysis of the
+extracted decisions reveals common choices in this type of analysis
+(number of knots or degree of freedom for smoothing methods for time,
+temperature and humidity) and find three distinct clusters corresponding
+to different smoothing methods (LOESS, natural spline, and smoothing
+spline) used in European and U.S. studies, consistent with findings from
+the APHENA project \citep{APHENA}.
 
 In summary, the contribution of this work includes:
 
@@ -469,6 +471,21 @@ identify common practices in the field.
 TODO: a generic summary of the workflow, maybe an illustration
 
 \subsection{Record decisions in data analysis}\label{sec-decisions}
+
+In the study of the health effects of outdoor air pollution, one area of
+interest is the association between short-term, day-to-day changes in
+particulate matter air pollution and daily mortality counts. This
+question has been studied extensively by researchers across the globe
+and in the US, it serves to provide scientific evidence for to guide
+public policy on setting the National Ambient Air Quality Standards
+(NAAQS) for air pollutants. While individual modelling choices vary,
+these studies often share a common structure: they adjust for
+meteorological covariates such as temperature and humidity, apply
+temporal or spatial treatments, like including lagged variables and may
+estimate the effect by city or region before combining results. This
+naturally forms a ``many-analyst'' experiment setting where different
+researchers analyze similar data to address the same scientific question
+and the analyses are documented in published papers.
 
 Consider the following excerpt from \citet{ostro2006} that describes the
 modelling approach to provide evidence of an association between daily
@@ -702,21 +719,6 @@ papers and on papers that report a minimal number of these decisions
 when calculating paper similarity.
 
 \section{Results}\label{sec-result}
-
-In the study of the health effects of outdoor air pollution, one area of
-interest is the association between short-term, day-to-day changes in
-particulate matter air pollution and daily mortality counts. This
-question has been studied extensively by researchers across the globe
-and in the US, it serves to provide scientific evidence for to guide
-public policy on setting the National Ambient Air Quality Standards
-(NAAQS) for air pollutants. While individual modelling choices vary,
-these studies often share a common structure: they adjust for
-meteorological covariates such as temperature and humidity, apply
-temporal or spatial treatments, like including lagged variables and may
-estimate the effect by city or region before combining results. This
-naturally forms a ``many-analyst'' experiment setting where different
-researchers analyze similar data to address the same scientific question
-and the analyses are documented in published papers.
 
 From the 56 studies examining the effect of particulate matters
 (\(\text{PM}_{10}\) and \(\text{PM}_{2.5}\)) on mortality and hospital
@@ -1019,19 +1021,6 @@ clustering}\label{paper-similarity-and-clustering}
 
 \centering{
 
-\pandocbounded{\includegraphics[keepaspectratio]{index_files/figure-pdf/fig-hc-1.pdf}}
-
-}
-
-\caption{\label{fig-hc}Maybe we don't need teh hierarchical clustering
-plot because it has the same information as the next MDS one???}
-
-\end{figure}%
-
-\begin{figure}
-
-\centering{
-
 \pandocbounded{\includegraphics[keepaspectratio]{index_files/figure-pdf/fig-mds-1.pdf}}
 
 }
@@ -1060,7 +1049,7 @@ score. Sensitivity analysis on different text embedding model is checked
 in Section~\ref{sec-text-model}. Paper similarity is then calculated as
 the average of decision similarity for each paper pair. The resulting
 distance matrix is then used for hierarchical clustering in
-Figure~\ref{fig-hc} and multi-dimensional scaling (MDS) in
+\textbf{?@fig-hc} and multi-dimensional scaling (MDS) in
 Figure~\ref{fig-mds}. The two MDS dimension reveals three clusters
 correspond to the three smoothing methods used in these analyses: LOESS,
 natural spline, and smoothing spline. This grouping aligns with the
