--- a/index.qmd
+++ b/index.qmd
@@ -92,19 +92,29 @@ gemini_df <- read_csv(here::here("data/gemini_df.csv")) |> as_decision_tbl()
 
 <!-- This approach treats decisions in data analysis as data to analyse, allowing us to track them over time, compare methodology across papers, and query commonly used approaches. -->
 
+<!-- As a new approach to study decision-making practices in data analysis at scale, what we propose can be applied to other domain of interest to understand the choices in the other applied field. This complements existing qualitative and interview-based studies and many analyst experiments that puts together a set of analysts to analyze the same dataset (maybe not impact in applied research). -->
+
+<!-- There are also meta-analysis to synthesize results from multiple studies, but these focus on the results and not consider the decisions made in the analysis. -->
+
 # Introduction
 
-Decisions are made at every stage of data analysis: from initial data collection and pre-processing to modelling choices. Different decision choices can have a direct impact to the final results, which can lead to different interpretation and policy recommendations that follow. When independent analysts analyzing the same dataset even to answer the same research questions, through many-analysts experiments, they often arrive at markedly different conclusions [@silberzahn2018; @botvinik-nezer2020; @gould2025]. This variability in results can be attributed to the flexibility analysts have in making decisions throughout the data analysis process, which @gelman2014 describe as the "garden of forking paths". When such flexibility is misused, data analysis can lead to p-hacking, selective reporting, inflated effect sizes, and other issues, undermining the quality and credibility of the findings.
+TODO: need references
 
-\[this is not okay --- Multiple recommendations have been proposed to improve data analysis practices, such as pre-registration and multiverse analysis. Bayesian methods also offer a different paradigm to p-value driven inference for interpreting statistical evidence. Most empirical studies of data analysis practices focus on specially designed and simplified analysis scenarios. While informative, these setups may not adequately capture the complexity of the data analysis with significant policy implications. \[In practice, studying the data analysis decisions with actual applications is challenging.\] Analysts may no longer be available for interviews due to job changes, and even when they are, recalling the full set of decisions and thinking process made during the analysis is often infeasible. Moreover, only until the last decades, analysis scripts and reproducible materials were not commonly required by journals for publishing. --- up till here\]
+Decisions are made at every stage of data analysis, from initial data collection and preprocessing to modeling. One might expect well-trained researchers to make similar choices when faced with the same analytical task, yet evidence suggests otherwise. Many-analyst experiments show that independent analysts often arrive at markedly different conclusions, even when analyzing the same dataset to answer the same research question [@silberzahn2018; @botvinik-nezer2020; @gould2025]. This variation in analytical decision-making, described by @gelman2014 as the "garden of forking paths," can undermine the quality and credibility of reported results and hinder comparability across studies. For junior researchers who lack guidance, this variability may lead to over reliance on default statistical software settings or arbitrary choices made without clear justification.
 
-In this work, we propose a new approach to study data analysis decision choices through automatic extraction of decisions from scientific literature using LLMs. We  develop a tabular format to record analytical decisions in data analysis and automate the extraction of these decisions from published papers using large language models (Gemini and Claude). The workflow also include a component to calculate paper similarity based on both the decisions and the semantic similarity of their rationales, and use clustering methods to visualize papers according to distance based on decision similarity. We apply this workflow to a set of `r length(unique(gemini_df$paper))` air pollution modelling studies estimating the effect size of particulate matter (PM2.5 or PM10) on mortality and hospital admissions, typically modeled using Poisson generalized linear models (GLMs) or generalized additive models (GAMs). Analysis of the extracted decisions reveals common choices in this type of analysis (number of knots or degree of freedom for smoothing methods for time, temperature and humidity) and find three distinct clusters corresponding to different smoothing methods (LOESS, natural spline, and smoothing spline) used in European and U.S. studies, consistent with findings from the APHENA project [@APHENA].
+A common approach to investigate uncertainty in decision choices is sensitivity analysis, where researchers systematically vary key decisions in their analysis to assess the robustness of their findings. Multiverse analysis extends this idea by evaluating *all* plausible combinations of analytical choices to examine how results vary across the full decision space [@multiverse; @blair2019]. However, what an analyst consider "reasonable" is subjective and may not reflect the full range of options commonly used in practice. Even when a reasonable set of alternatives is tested, the sensitivity analysis may be of limited interest to other researchers facing a similar problem, who are seeking evidence to inform comparable decision choices and their rationale. Ideally, decision-making in applied research would be studied by following experienced analysts throughout the entire analysis process to capture their reasoning. In reality, this is rarely feasible and not scalable.
+
+While individual studies may not capture the full range of reasonable decision options, crowdsourcing decisions from a collection of studies on a shared theme creates a "many-analyst" setting that reveals how analysts make choices and justify them in practice. Classic research training typically involves reading through the literature to understand how decisions are made and to learn the common choices. This process now has the possibility to be automated at scale given recent LLMs' ability to follow instructions to extract structured information from unstructured text. In this work, we propose a new approach for studying data analysis decision choices by automatically extracting decisions from scientific literature using Large Language Models (LLMs). We develop a tabular schema to record decisions, automate the extraction process with LLMs, and introduce a new paper similarity measure based on decision similarity, which serves as a distance metric for dimension reduction methods to visualize papers group according to their decision patterns.
+
+We apply this workflow to a set of `r length(unique(gemini_df$paper))` air pollution modelling studies estimating the effect of particulate matter (PM2.5 or PM10) on mortality and hospital admissions. This type of studies is typically analyzed using Poisson generalized linear models (GLMs) or generalized additive models (GAMs). Analysis of the extracted decisions reveals common choices for decisions considered in this type of studies such as the number of knots or degree of freedom for smoothing methods and the temporal lags for time and weather variables. Multi-dimensional scaling on the paper similarity distance finds three distinct clusters corresponding to different smoothing methods -- LOESS, natural spline, and smoothing spline -- used in European and U.S. studies. These findings align with the APHENA project [@APHENA], which synthesizes research from multiple studies in Europe and North America by expert investigators.
+
+In this workflow, we also provide detailed documentation on the validation and standardization of LLM outputs. Because LLMs generate results probabilistically, it is not yet clear how these outputs should be validated for downstream analysis in practice. We outline the validation and standardization process, including the use of a developed Shiny application in R for reviewing decisions, the types of edits made through validation, and secondary standardization of decisions. Additionally, we conduct sensitivity across different LLM providers and assess the reproducibility of the text extraction from single LLM models. We aim to offer guidance for future studies seeking to extract structured information from unstructured text using LLMs.
 
 In summary, the contribution of this work includes:
 
 -   A new approach to study data analysis decision choices through automatic extraction of decisions from scientific literature using LLMs,
 
--   A method to construct paper similarities based on the decisions and the semantic similarity of their rationale, 
+-   A new method to construct paper similarities based on the decisions and the semantic similarity of their rationale, 
 
 -  A shiny GUI tool for validation LLM outputs in this context, and
 
