--- a/index.qmd
+++ b/index.qmd
@@ -138,7 +138,15 @@ With the growing volume of scientific publications and the difficulty of navigat
 
 # Methods {#sec-extract-decisions}
 
-TODO: a generic summary of the workflow, maybe an illustration
+In this section, we present the workflow for extracting decisions from published literature using Large Language Models (LLMs). We first describe the data structure for recording decisions, followed by the four main steps: 1) automatic extraction from literature with LLMs, 2) validation and standardization of LLM outputs, 3) calculation of paper similarity, and 4) visualization paper similarity using clustering or dimension reduction methods. An overview of the workflow is illustrated in @fig-workflow. 
+
+```{r}
+#| label: fig-workflow
+#| fig-cap: "The workflow for extracting decisions from published literature using Large Language Models (LLMs) and analyzing the extracted decisions. The workflow consists of four main steps: (1) Extract decisions automatically from literature with LLMs, (2) Validate and standardize LLM outputs, (3) Calculate paper similarity and visualization, and (4) visualization with clustering or dimension reduction methods."
+#| out.width: "100%"
+knitr::include_graphics(here::here("figures/workflow.png"))
+```
+
 
 ## Record decisions in data analysis {#sec-decisions}
 
